--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
 		<div class="row header">
 			<div class="column column-1">&nbsp;</div>
 			<div class="column column-10 intro">
-				<div>
-					<h1>DCPS school modernization</h1>
-					<p> functionality test </p>
-				</div>
+				<h1>DCPS school modernization</h1>
+				<h5> functionality test </h5>
 			</div>
 			<div class="column column-1">&nbsp;</div>
 		</div>
@@ -33,7 +31,13 @@
 			</div>
 			<div class="column column-3 profile">
 				<h4 class="info profileTitle">School Data</h4>
+
+				<!-- ======= profile ======= -->
 				<div id="profileData"></div>
+
+				<!-- ======= d3 ======= -->
+				<div id="chartHorizontal"></div>
+
 			</div>
 		</div>
 
@@ -46,20 +50,9 @@
 	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 		<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
 		<script type="text/javascript" src="script.js"></script>
-		<script type="text/javascript">
-			$(document).ready(function(){
-				console.log('jQuery loaded');
-				console.log('document ready');
-
-				var bootstrap3_enabled = (typeof $().emulateTransitionEnd == 'function');
-			    console.log("bootstrap3_enabled: " + bootstrap3_enabled);
-
-				// init();
-				// initEventHandlers();
-
-			});
-		</script>
+		<script type="text/javascript" src="d3graphs.js"></script>
 
 	</body>
 </html>
