new data files and switched to google maps

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 				<div class="filterDivs">
 					<div id="wards">wards</div>
 					<div id="feeders">feeders</div>
-					<div id="publicSchools">public</div>
-					<div id="charterSchools">charter</div>
+					<div id="public">public</div>
+					<div id="charter">charter</div>
 				</div>
 			</div>
 
@@ -59,6 +59,8 @@
 	    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 		<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
+		<!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBkBjmogOyMcL5_QVtayKZ_X85rSQAf3BE&callback=initMap"></script> -->
+		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBkBjmogOyMcL5_QVtayKZ_X85rSQAf3BE"></script>
 		<script type="text/javascript" src="script.js"></script>
 		<script type="text/javascript" src="d3graphs.js"></script>
 
