improved mouseover function

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<!-- ======= ======= ======= content ======= ======= ======= -->
 		<div class="row content">
 			<!-- ======= filters ======= -->
-			<div class="column column-2 filters">
+			<div class="column column-2 filterCol">
 				<h4 class="title">Filters</h4>
 				<div class="filterDivs">
 					<div id="wards">wards</div>
@@ -33,6 +33,7 @@
 					<div id="public">public</div>
 					<div id="charter">charter</div>
 				</div>
+				<!-- <nav id="mainNav"></nav> -->
 			</div>
 
 			<!-- ======= map ======= -->
@@ -55,7 +56,10 @@
 		</div>
 
 		<!-- ======= ======= ======= scripts ======= ======= ======= -->
-	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+		<!-- <script src="../jquery-2.1.4.min.js"></script> -->
+		<script src="jquery-2.1.4.min.js"></script>
+		<!-- <script src="../../_TOOLBOX/jquery-2.1.4.min.js"></script> -->
+	    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> -->
 	    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 		<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
@@ -69,6 +73,14 @@
 
 
 <!-- ======= ======= ======= ARCHIVE ======= ======= =======
+
+<div class="filterDivs">
+	<div id="wards">wards</div>
+	<div id="feeders">feeders</div>
+	<div id="public">public</div>
+	<div id="charter">charter</div>
+</div>
+
 
 school attendence zone (high school)
 http://opendata.dc.gov/datasets/3f5263d0534a42bd84d245102c8578a9_8.geojson
