--- a/index.html
+++ b/index.html
@@ -56,10 +56,7 @@
 		</div>
 
 		<!-- ======= ======= ======= scripts ======= ======= ======= -->
-		<!-- <script src="../jquery-2.1.4.min.js"></script> -->
-		<script src="jquery-2.1.4.min.js"></script>
-		<!-- <script src="../../_TOOLBOX/jquery-2.1.4.min.js"></script> -->
-	    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> -->
+	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 		<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
