filter menu local working

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
 		<!-- ======= ======= ======= content ======= ======= ======= -->
 		<div class="row content">
-			<!-- ======= filters ======= -->
-			<div class="column column-2 filterCol">
-				<h4 class="title">Filters</h4>
-				<div class="filterDivs">
+			<!-- ======= displays ======= -->
+			<div class="column displayCol">
+				<h4 class="title">Display</h4>
+				<div class="displayDivs">
 					<div id="wards">wards</div>
 					<div id="feeders">feeders</div>
 					<div id="public">public</div>
@@ -37,16 +37,17 @@
 			</div>
 
 			<!-- ======= map ======= -->
-			<div class="column column-6 mapArea">
+			<div class="column mapCol">
 				<div id="map"></div>
 			</div>
 
 			<!-- ======= profile ======= -->
-			<div class="column column-4 profile">
-				<h4 class="title">School Data</h4>
+			<div class="column profileCol">
+				<h4 class="title">Filters</h4>
+				<nav id="filterNav"></nav>
+				<h4 class="title">Selected Data</h4>
 				<div id="profileData"></div>
 				<div id="chartData"></div>
-
 			</div>
 		</div>
 
@@ -71,7 +72,7 @@
 
 <!-- ======= ======= ======= ARCHIVE ======= ======= =======
 
-<div class="filterDivs">
+<div class="displayDivs">
 	<div id="wards">wards</div>
 	<div id="feeders">feeders</div>
 	<div id="public">public</div>
