refactored to object oriented design

--- a/index.html
+++ b/index.html
@@ -17,25 +17,12 @@
 			<div class="column column-1">&nbsp;</div>
 			<div class="column column-10 intro">
 				<h1>DCPS school modernization</h1>
-				<h5> functionality test </h5>
 			</div>
 			<div class="column column-1">&nbsp;</div>
 		</div>
 
 		<!-- ======= ======= ======= content ======= ======= ======= -->
 		<div class="row content">
-			<!-- ======= displays ======= -->
-			<div class="column displayCol">
-				<h4 class="title">Display</h4>
-				<div class="displayDivs">
-					<div id="wards">wards</div>
-					<div id="feeders">feeders</div>
-					<div id="public">public</div>
-					<div id="charter">charter</div>
-				</div>
-				<!-- <nav id="mainNav"></nav> -->
-			</div>
-
 			<!-- ======= map ======= -->
 			<div class="column mapCol">
 				<div id="map"></div>
@@ -59,8 +46,8 @@
 		<!-- ======= ======= ======= scripts ======= ======= ======= -->
 	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-		<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
+		<!-- <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script> -->
+		<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script> -->
 		<!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBkBjmogOyMcL5_QVtayKZ_X85rSQAf3BE&callback=initMap"></script> -->
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBkBjmogOyMcL5_QVtayKZ_X85rSQAf3BE"></script>
 		<script type="text/javascript" src="script.js"></script>
