improved filter feedback

--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
 			<!-- ======= map ======= -->
 			<div class="column mapCol">
 				<div id="map"></div>
+				<div id="message"><p></p></div>
 			</div>
 
 			<!-- ======= profile ======= -->
 			<div class="column profileCol">
 				<h4 class="title">Filters</h4>
 				<nav id="filterNav"></nav>
-				<h4 class="title">Selected Data</h4>
+				<h4 id="filterTitle" class="title">Data Display</h4>
 				<div id="profileData"></div>
 				<div id="chartData"></div>
 			</div>
