--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous"> -->
 	<!-- <link rel="stylesheet" href="/css/bootstrap-theme.css" type="text/css">
 	<link rel="stylesheet" href="/css/bootstrap.css" type="text/css"> -->
-	<link rel="stylesheet" href="/css/style.css" type="text/css">
+	<link rel="stylesheet" href="css/style.css" type="text/css">
 
 </head>
 <body>
@@ -74,7 +74,7 @@
 		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBkBjmogOyMcL5_QVtayKZ_X85rSQAf3BE&libraries=geometry"></script>
 		<script type="text/javascript" src="script.js"></script>
 		<!-- <script type="text/javascript" src="../VENDORS/bootstrap-3.3.6"></script> -->
-		<script type="text/javascript" src="infoBubble.js"></script>
+		<!-- <script type="text/javascript" src="infoBubble.js"></script> -->
 		<script type="text/javascript" src="utilities.js"></script>
 		<script type="text/javascript" src="d3graphs.js"></script>
 
