--- a/profile.html
+++ b/profile.html
@@ -32,8 +32,8 @@
 				<h1>DCPS School Modernization Tool</h1>
 			</div>
 			<ul class="tabs">
-				<li class="tab active-tab"><a href="#">Map</a></li>
-				<li class="tab"><a href="profile.html">Profile</a></li>
+				<li class="tab"><a href="index.html">Map</a></li>
+				<li class="tab active-tab"><a href="#">Profile</a></li>
 				<li class="tab"><a href="comparison.html">Comparison</a></li>
 			</ul>
 		</div>
@@ -51,16 +51,17 @@
 			<!-- ======= map ======= -->
 			<div class="column col-md-12 mapCol">
 				<!-- <button id="btn_popup">popup</button> -->
-				<div id="tooltips"></div>
 				<div id="smoke">...</div>
 				<div id="popup">
 					<div id="popup_bar">filters</div>
+
 					<nav id="main-nav"></nav>
+
 				</div>
 
-				<div id="map"></div>
-				<div id="message"><p>&nbsp;</p></div>
+				<div id="map2"></div>
 				<div id="profileData"></div>
+				<div id="message"><p>&nbsp;</p></div>
 			</div>
 
 		</div>
