--- a/index.html
+++ b/index.html
@@ -41,13 +41,6 @@
 		<!-- ======= ======= ======= content ======= ======= ======= -->
 		<div class="row content">
 
-			<!-- ======= main-nav ======= -->
-			<!-- <div class="column col-md-3 mapCol">
-				<h3 class='subtitle'>Filters</h3>
-				<nav id="main-nav"></nav>
-			</div> -->
-
-
 			<!-- ======= map ======= -->
 			<div class="column col-md-12 mapCol">
 				<!-- <button id="btn_popup">popup</button> -->
@@ -67,7 +60,7 @@
 
 		<!-- ======= ======= ======= scripts ======= ======= ======= -->
 	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script> -->
+	    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 		<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script> -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
 		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBkBjmogOyMcL5_QVtayKZ_X85rSQAf3BE&libraries=geometry"></script>
