--- a/profile.html
+++ b/profile.html
@@ -41,44 +41,40 @@
 		<!-- ======= ======= ======= content ======= ======= ======= -->
 		<div class="row content">
 
-			<!-- ======= main-nav ======= -->
-			<!-- <div class="column col-md-3 mapCol">
-				<h3 class='subtitle'>Filters</h3>
-				<nav id="main-nav"></nav>
-			</div> -->
-
-
 			<!-- ======= map ======= -->
-			<div class="column col-md-12 mapCol">
+			<div class="column col-md-4 map2Col">
 				<!-- <button id="btn_popup">popup</button> -->
+				<div id="tooltips"></div>
 				<div id="smoke">...</div>
 				<div id="popup">
-					<div id="popup_bar">filters</div>
-
+					<div id="popup_bar"><p>filters</p></div>
 					<nav id="main-nav"></nav>
-
+					<div id="schoolInfo"></div>
 				</div>
 
 				<div id="map2"></div>
-				<div id="profileData"></div>
 				<div id="message"><p>&nbsp;</p></div>
+				<div id="profileData"></div>
+
 			</div>
 
+			<!-- ======= map ======= -->
+			<div class="column col-md-8 profileCol">
+				profile
+			</div>
 		</div>
 
 		<!-- ======= ======= ======= scripts ======= ======= ======= -->
-	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script> -->
-		<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script> -->
+	    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+		<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
-		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBkBjmogOyMcL5_QVtayKZ_X85rSQAf3BE&libraries=geometry"></script>
+		<!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBkBjmogOyMcL5_QVtayKZ_X85rSQAf3BE"></script> -->
+		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBkBjmogOyMcL5_QVtayKZ_X85rSQAf3BE&libraries=geometry&libraries=visualization"></script>
+		<!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBkBjmogOyMcL5_QVtayKZ_X85rSQAf3BE&libraries=visualization"></script> -->
 		<script type="text/javascript" src="script.js"></script>
-		<!-- <script type="text/javascript" src="../VENDORS/bootstrap-3.3.6"></script> -->
-		<!-- <script type="text/javascript" src="infoBubble.js"></script> -->
 		<script type="text/javascript" src="utilities.js"></script>
 		<script type="text/javascript" src="d3graphs.js"></script>
 
-	</div>
 </body>
 </html>
 
