refactoring event listenerfunctions

--- a/index.html
+++ b/index.html
@@ -47,11 +47,13 @@
 				<div id="tooltips"></div>
 				<div id="smoke">...</div>
 				<div id="popup">
-					<div id="popup_bar"><p>filters</p></div>
+					<div class="popup_bar"><p>filters</p></div>
 					<nav id="main-nav"></nav>
-					<div id="schoolInfo"></div>
 				</div>
-
+				<div id="info">
+					<div class="popup_bar"><p>info</p></div>
+					<div id="infoText"></div>
+				</div>
 				<div id="map"></div>
 				<div id="message"><p>&nbsp;</p></div>
 				<div id="profileData"></div>
