added rudimentary profile page

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<div id="tooltips"></div>
 				<div id="smoke">...</div>
 				<div id="popup">
-					<div class="popup_bar"><p>filters</p></div>
+					<div id="popup_bar" class="popup_bar"><p>filters</p></div>
 					<nav id="main-nav"></nav>
 				</div>
 				<div id="info">
