--- a/profile.html
+++ b/profile.html
@@ -41,26 +41,26 @@
 		<!-- ======= ======= ======= content ======= ======= ======= -->
 		<div class="row content">
 
-			<!-- ======= map ======= -->
+			<!-- ======= map column ======= -->
 			<div class="column col-md-4 map2Col">
 				<!-- <button id="btn_popup">popup</button> -->
 				<div id="tooltips"></div>
 				<div id="smoke">...</div>
-				<div id="popup">
-					<div id="popup_bar"><p>filters</p></div>
-					<nav id="main-nav"></nav>
-					<div id="schoolInfo"></div>
+				<div id="info">
+					<div class="popup_bar"><p>info</p></div>
+					<div id="infoText"></div>
 				</div>
-
 				<div id="map2"></div>
-				<div id="message"><p>&nbsp;</p></div>
-				<div id="profileData"></div>
 
 			</div>
 
-			<!-- ======= map ======= -->
+			<!-- ======= profile column ======= -->
 			<div class="column col-md-8 profileCol">
-				profile
+
+				<!-- ======= map ======= -->
+				<h3 id="schoolTitle"></h3>
+				<div id="profileData"></div>
+
 			</div>
 		</div>
 
@@ -71,7 +71,7 @@
 		<!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBkBjmogOyMcL5_QVtayKZ_X85rSQAf3BE"></script> -->
 		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBkBjmogOyMcL5_QVtayKZ_X85rSQAf3BE&libraries=geometry&libraries=visualization"></script>
 		<!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBkBjmogOyMcL5_QVtayKZ_X85rSQAf3BE&libraries=visualization"></script> -->
-		<script type="text/javascript" src="script.js"></script>
+		<script type="text/javascript" src="script_profile.js"></script>
 		<script type="text/javascript" src="utilities.js"></script>
 		<script type="text/javascript" src="d3graphs.js"></script>
 
