--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 				</div>
 				<div id="map"></div>
 				<div id="message"><p>&nbsp;</p></div>
+				<div id="chartData"></div>
 				<div id="profileData"></div>
 			</div>
 
