added chloropleth legend

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 				<div id="map"></div>
 				<div id="message"><p>&nbsp;</p></div>
 				<div id="chart"></div>
+				<div id="mapLegend"></div>
 				<div id="profileData"></div>
 			</div>
 
