added clear button

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 		<!-- ======= ======= ======= tabs ======= ======= ======= -->
 		<div class="row header">
 			<div class="page-title"><h1>DCPS School Modernization Tool</h1></div>
-			<div id="filters-title"><h2>your filters</h2></div>
+			<div id="filters-title" class="banner"><h2>your filters</h2></div>
+			<div id='clear-button'><span class='btn-text'>clear</span></div>
 		</div>
 
 		<!-- ======= ======= ======= content ======= ======= ======= -->
