--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 			<div class="page-title"><h1>DCPS School Modernization Tool</h1></div>
 			<div id="filters-title" class="banner"><h2>your filters</h2></div>
 			<div id='clear-button'><span class='btn-text'>clear</span></div>
+			<div id='zone-school-button'><span class='btn-text'>schools</span></div>
 		</div>
 
 		<!-- ======= ======= ======= content ======= ======= ======= -->
