--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="images/favicon.ico">
 
   <!-- ======= ======= ======= styles ======= ======= ======= -->
-	<title>DCPS SchoolMod</title>
+	<title>DCPS MapTool</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<link rel="stylesheet" href="css/jquery-ui.min.css" type="text/css">
@@ -29,7 +29,6 @@
 		<div class="row header">
 			<div class="page-title"><h1>DCPS School Modernization Tool</h1></div>
 			<div id="filters-title" class="banner"><h2>your filters</h2></div>
-			<div id='clear-button'><span class='btn-text'>clear</span></div>
 			<div id='zone-school-button'><span class='btn-text'>schools</span></div>
 		</div>
 
@@ -41,11 +40,14 @@
 				<!-- <button id="btn_popup">popup</button> -->
 				<div id="tooltips"></div>
 				<div id="popup">
-					<div id="drag_bar" class="title_bar"><p>filters</p></div>
+					<div id="drag_bar" class="title_bar">
+						<p>filters</p>
+						<div id='clear-button'><span class='btn-text'>clear</span></div>
+					</div>
 					<nav id="main-nav"></nav>
 				</div>
 
-				<div id="map"></div>
+				<div id="toolMap-container"></div>
 				<div id='profile-container'></div>
 				<div id='legend-container'></div>
 		        <div id='chart-container'></div>
@@ -61,6 +63,14 @@
 		<script type="text/javascript" src="d3graphs.js"></script>
 		<script type="text/javascript" src="utilities.js"></script>
 		<script type="text/javascript" src="script.js"></script>
+
+		<script type="text/javascript">
+			$(document).ready(function(){
+			    console.log('jQuery loaded');
+			    console.log('document ready');
+				var fs = initApp("toolMap");
+			});
+		</script>
 
 	</div>
 </body>
