improved profile formatting/shared address functionality

--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
 
 		<!-- ======= ======= ======= scripts ======= ======= ======= -->
 	    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+		<!-- <script type="text/javascript" src="jquery-ui-1.11.4.custom/jquery-ui.min.js"></script> -->
 		<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
 		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBkBjmogOyMcL5_QVtayKZ_X85rSQAf3BE&libraries=visualization"></script>
-		<script type="text/javascript" src="jquery-ui-1.11.4.custom/jquery-ui.min.js"></script>
 		<script type="text/javascript" src="d3graphs.js"></script>
 		<script type="text/javascript" src="utilities.js"></script>
 		<script type="text/javascript" src="script.js"></script>
