--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
 		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBkBjmogOyMcL5_QVtayKZ_X85rSQAf3BE&libraries=visualization"></script>
 		<script type="text/javascript" src="d3graphs.js"></script>
+		<script type="text/javascript" src="processText.js"></script>
 		<script type="text/javascript" src="utilities.js"></script>
 		<script type="text/javascript" src="script.js"></script>
 
